--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <li class="header__links-list-item">
             <a href="#" class="header__link menu-link_active">главная </a>
           </li>
-          <li class="header__links-list-item">
+          <li class="header__links-list-item text__underline">
             <a href="#lots" class="header__link">посмотреть лоты </a>
           </li>
-          <li class="header__links-list-item">
+          <li class="header__links-list-item text__underline">
             <a href="#about" class="header__link">об аукционе </a>
           </li>
         </ul>
@@ -32,9 +32,11 @@
         />
       </a>
       <address class="address header__address">
-        <a href="tel:+99995555555" class="phon_email"> +9 999 555 5555</a>
+        <a href="tel:+99995555555" class="text__underline"> +9 999 555 5555</a>
         <br />
-        <a href="mailto:info@sobaka.ge" class="phon_email">info@sobaka.ge</a>
+        <a href="mailto:info@sobaka.ge" class="text__underline"
+          >info@sobaka.ge
+        </a>
         <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
@@ -112,7 +114,9 @@
             </a>
           </li>
         </ul>
-        <a href="#" class="lots__look-more-link">посмотреть больше </a>
+        <a href="#" class="lots__look-more-link text__underline"
+          >посмотреть больше
+        </a>
       </section>
       <section class="about">
         <section class="about__round__logo">
@@ -144,9 +148,11 @@
     </main>
     <footer class="footer">
       <address class="address footer__address">
-        <a href="tel:+99995555555" class="phon_email"> +9 999 555 5555</a>
+        <a href="tel:+99995555555" class="text__underline"> +9 999 555 5555</a>
         <br />
-        <a href="mailto:info@sobaka.ge" class="phon_email"> info@sobaka.ge</a>
+        <a href="mailto:info@sobaka.ge" class="text__underline">
+          info@sobaka.ge</a
+        >
         <p>
           наб. Принсенграхт 263-265,<br />
           Амстердам
@@ -158,10 +164,14 @@
             <a href="#" class="footer__menu-link menu-link_active"> главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#lots" class="footer__menu-link"> посмотреть лоты</a>
+            <a href="#lots" class="footer__menu-link text__underline">
+              посмотреть лоты</a
+            >
           </li>
           <li class="footer__menu-list-item">
-            <a href="#about" class="footer__menu-link"> об аукционе</a>
+            <a href="#about" class="footer__menu-link text__underline">
+              об аукционе
+            </a>
           </li>
         </ul>
       </nav>
