Added underlined text to Lots section headings

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li class="lots__card-list-item">
             <a href="#" class="card-link card_type_film">
               <article class="card overlay">
-                <h3 class="card__title">
+                <h3 class="card__title text__underline">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
                 <p class="card__text">
@@ -84,7 +84,7 @@
           <li class="lots__card-list-item">
             <a href="#" class="card-link card_type_book">
               <article class="card overlay">
-                <h3 class="card__title">
+                <h3 class="card__title text__underline">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
                 <p class="card__text">
@@ -101,7 +101,7 @@
           <li class="lots__card-list-item">
             <a href="#" class="card-link card_type_picture">
               <article class="card overlay">
-                <h3 class="card__title">
+                <h3 class="card__title text__underline">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
                 <p class="card__text">
