--- a/index.html
+++ b/index.html
@@ -56,19 +56,21 @@
               <span class="no-letter-spacing"> о </span>
             </span>
           </h1>
-          <section class="cover__description white__text">
+          <div class="cover__description white__text">
             <p class="cover__description-text">
               Аукцион вещей. В которые никто не верил
             </p>
-            <button class="bet-button white__text">Сделать ставку</button>
-          </section>
+            <button type="button" class="bet-button white__text">
+              Сделать ставку
+            </button>
+          </div>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots__heading" id="lots">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a href="#" class="card-link card_type_film">
+            <a href="#" class="card-link card_type_film card_type_style">
               <article class="card overlay">
                 <h3 class="card__title text__underline">
                   Фильм режиссёра, который бросил киношколу
@@ -82,7 +84,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="#" class="card-link card_type_book">
+            <a href="#" class="card-link card_type_book card_type_style">
               <article class="card overlay">
                 <h3 class="card__title text__underline">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -99,7 +101,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="#" class="card-link card_type_picture">
+            <a href="#" class="card-link card_type_picture card_type_style">
               <article class="card overlay">
                 <h3 class="card__title text__underline">
                   Картина, которую повторит даже 5-летний сын маминой подруги
@@ -128,21 +130,24 @@
         </section>
         <section class="about__list">
           <h2 class="about__title" id="about">Об аукционе</h2>
-          <p class="about__text">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
-            <br />
-            <br />
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря на критику,
-            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-            представить современную культуру. Когда в эти вещи не верил никто,
-            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </p>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
         </section>
       </section>
     </main>
@@ -177,7 +182,7 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
+          <a href="#" target="_blank" class="footer__social-link">
             <img
               src="./images/yt.svg"
               alt="youtube"
@@ -186,7 +191,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
+          <a href="#" target="_blank" class="footer__social-link">
             <img
               src="./images/vk.svg"
               alt="вконтакте"
@@ -195,7 +200,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
+          <a href="#" target="_blank" class="footer__social-link">
             <img
               src="./images/pinterest.svg"
               alt="pinterest"
