Header's size correction

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li class="lots__card-list-item">
             <a href="#" class="card-link card_type_film card_type_style">
               <article class="card overlay">
-                <h3 class="card__title text__underline">
+                <h3 class="text__underline">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
                 <p class="card__text">
@@ -86,7 +86,7 @@
           <li class="lots__card-list-item">
             <a href="#" class="card-link card_type_book card_type_style">
               <article class="card overlay">
-                <h3 class="card__title text__underline">
+                <h3 class="text__underline">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
                 <p class="card__text">
@@ -103,7 +103,7 @@
           <li class="lots__card-list-item">
             <a href="#" class="card-link card_type_picture card_type_style">
               <article class="card overlay">
-                <h3 class="card__title text__underline">
+                <h3 class="text__underline">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
                 <p class="card__text">
