--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
               <span class="no-letter-spacing">о</span>
             </span>
             <span class="aligned-text_center letter-spacing-extended">
-              тебе
+              теб
+              <span class="no-letter-spacing"> е </span>
             </span>
             <span class="aligned-text_right letter-spacing-extended">
               над
