--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
       </a>
       <address class="address header__address">
         <a href="tel:+99995555555" class="text__underline"> +9 999 555 5555</a>
-        <br />
         <a href="mailto:info@sobaka.ge" class="text__underline"
           >info@sobaka.ge
         </a>
-        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -155,13 +154,11 @@
     <footer class="footer">
       <address class="address footer__address">
         <a href="tel:+99995555555" class="text__underline"> +9 999 555 5555</a>
-        <br />
         <a href="mailto:info@sobaka.ge" class="text__underline">
           info@sobaka.ge</a
         >
         <p>
-          наб. Принсенграхт 263-265,<br />
-          Амстердам
+          наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
       <nav class="footer__menu">
