--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
         <a href="mailto:info@sobaka.ge" class="text__underline">
           info@sobaka.ge</a
         >
-        <p>
-          наб. Принсенграхт 263-265, Амстердам
-        </p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
